[gd_scene load_steps=28 format=3 uid="uid://6mp7bp17ft6w"]

[ext_resource type="Texture2D" uid="uid://cvdwlujqq8r81" path="res://assets/Images/UI/WinBack.png" id="1_biflu"]
[ext_resource type="Theme" uid="uid://cmbo3c7rnoun7" path="res://assets/theme.tres" id="1_i16v8"]
[ext_resource type="Script" path="res://scenes/main_menu.gd" id="2_6byix"]
[ext_resource type="Texture2D" uid="uid://dd6xe4apdlud7" path="res://assets/MatIcons/login_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" id="4_1aehp"]
[ext_resource type="Texture2D" uid="uid://co4s5e72enx0u" path="res://assets/MatIcons/manage_accounts_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" id="4_s78qd"]
[ext_resource type="Texture2D" uid="uid://iu06lhfn3acb" path="res://assets/MatIcons/manage_accounts_24dp_000000_FILL0_wght700_GRAD200_opsz24.svg" id="5_a48s5"]
[ext_resource type="Texture2D" uid="uid://baqj5bsftwv4j" path="res://assets/MatIcons/play_circle_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" id="5_h2wa0"]
[ext_resource type="Texture2D" uid="uid://y5w8tqjrse7n" path="res://assets/MatIcons/login_24dp_000000_FILL0_wght700_GRAD200_opsz24.svg" id="5_qybkx"]
[ext_resource type="Texture2D" uid="uid://dhismigy7jjcv" path="res://assets/MatIcons/home_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" id="6_8cisp"]
[ext_resource type="Texture2D" uid="uid://c2ouspheqlxsp" path="res://assets/MatIcons/play_circle_24dp_000000_FILL0_wght700_GRAD200_opsz24.svg" id="6_c3u34"]
[ext_resource type="Texture2D" uid="uid://c0rgficet05i6" path="res://assets/MatIcons/settings_applications_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" id="6_sfhnf"]
[ext_resource type="Texture2D" uid="uid://c7k8nkeora5ht" path="res://assets/MatIcons/logout_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" id="6_yvnxy"]
[ext_resource type="Texture2D" uid="uid://cb4ypsmhduaep" path="res://assets/MatIcons/home_24dp_000000_FILL0_wght700_GRAD200_opsz24.svg" id="7_fl2qb"]
[ext_resource type="Texture2D" uid="uid://b4kqbqxhfpdrm" path="res://assets/MatIcons/logout_24dp_000000_FILL0_wght700_GRAD200_opsz24.svg" id="7_q6i58"]
[ext_resource type="Texture2D" uid="uid://bsslav3tq3ad4" path="res://assets/MatIcons/settings_applications_24dp_000000_FILL0_wght700_GRAD200_opsz24.svg" id="7_sbrbm"]
[ext_resource type="PackedScene" uid="uid://cyc3y0utjf0lp" path="res://scenes/connection_status.tscn" id="8_lu7j6"]
[ext_resource type="PackedScene" uid="uid://bractynrlw3vs" path="res://scenes/connection_popup.tscn" id="8_q25uu"]
[ext_resource type="Texture2D" uid="uid://bjw61wbk3q8q2" path="res://assets/MatIcons/close_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" id="10_usqbb"]
[ext_resource type="Texture2D" uid="uid://b3qnt0kpp8nhl" path="res://assets/MatIcons/close_24dp_000000_FILL0_wght700_GRAD200_opsz24.svg" id="11_sscp0"]
[ext_resource type="PackedScene" uid="uid://106bjfe7jhy2" path="res://scenes/user_settings.tscn" id="18_2jx18"]
[ext_resource type="PackedScene" uid="uid://cop3iatxem278" path="res://scenes/game_settings.tscn" id="19_qw0xi"]

[sub_resource type="ImageTexture" id="ImageTexture_ggknu"]

[sub_resource type="ImageTexture" id="ImageTexture_lpa1i"]

[sub_resource type="ImageTexture" id="ImageTexture_cfn6u"]

[sub_resource type="ImageTexture" id="ImageTexture_5b0h3"]

[sub_resource type="ImageTexture" id="ImageTexture_cg561"]

[sub_resource type="ImageTexture" id="ImageTexture_1gkq2"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_i16v8")
script = ExtResource("2_6byix")
game_scene_path = "res://scenes/in_game.tscn"

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -137.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 2
tabs_visible = false

[node name="Main" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Background" type="TextureRect" parent="TabContainer/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -137.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_biflu")
expand_mode = 1

[node name="PlayerList" type="RichTextLabel" parent="TabContainer/Main/Background"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
offset_left = 610.0
offset_top = 458.0
offset_right = 1332.0
offset_bottom = 851.0
mouse_filter = 1
theme_override_constants/outline_size = 0
bbcode_enabled = true
scroll_active = false
autowrap_mode = 2

[node name="User Settings" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="UserSettings" parent="TabContainer/User Settings" instance=ExtResource("18_2jx18")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 635.0
offset_top = 77.0
offset_right = -648.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
min_width = 480

[node name="Label" type="Label" parent="TabContainer/User Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -91.5
offset_top = 20.0
offset_right = 91.5
offset_bottom = 57.0
grow_horizontal = 2
text = "User settings"

[node name="Game Settings" type="Control" parent="TabContainer"]
layout_mode = 2

[node name="GameSettings" parent="TabContainer/Game Settings" instance=ExtResource("19_qw0xi")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 358.0
offset_top = 77.0
offset_right = -387.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="TabContainer/Game Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -94.0
offset_top = 20.0
offset_right = 94.0
offset_bottom = 57.0
grow_horizontal = 2
text = "Game settings"

[node name="Buttons" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -137.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 136.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Home" type="TextureButton" parent="Buttons/VBoxContainer"]
layout_mode = 2
tooltip_text = "home"
texture_normal = ExtResource("6_8cisp")
texture_pressed = ExtResource("7_fl2qb")
texture_disabled = SubResource("ImageTexture_ggknu")
stretch_mode = 3

[node name="UserSettings" type="TextureButton" parent="Buttons/VBoxContainer"]
layout_mode = 2
tooltip_text = "user settings"
texture_normal = ExtResource("4_s78qd")
texture_pressed = ExtResource("5_a48s5")
texture_disabled = SubResource("ImageTexture_ggknu")
stretch_mode = 3

[node name="GameSettings" type="TextureButton" parent="Buttons/VBoxContainer"]
layout_mode = 2
tooltip_text = "game settings"
texture_normal = ExtResource("6_sfhnf")
texture_pressed = ExtResource("7_sbrbm")
texture_disabled = SubResource("ImageTexture_lpa1i")
stretch_mode = 3

[node name="ConnectionSettings" type="TextureButton" parent="Buttons/VBoxContainer"]
layout_mode = 2
tooltip_text = "join/host"
texture_normal = ExtResource("4_1aehp")
texture_pressed = ExtResource("5_qybkx")
texture_disabled = SubResource("ImageTexture_cfn6u")
stretch_mode = 3

[node name="Disconnect" type="TextureButton" parent="Buttons/VBoxContainer"]
layout_mode = 2
tooltip_text = "leave"
texture_normal = ExtResource("6_yvnxy")
texture_pressed = ExtResource("7_q6i58")
texture_disabled = SubResource("ImageTexture_5b0h3")
stretch_mode = 3

[node name="StartGame" type="TextureButton" parent="Buttons/VBoxContainer"]
layout_mode = 2
tooltip_text = "start game"
texture_normal = ExtResource("5_h2wa0")
texture_pressed = ExtResource("6_c3u34")
texture_disabled = SubResource("ImageTexture_cg561")
stretch_mode = 3

[node name="QuitGame" type="TextureButton" parent="Buttons/VBoxContainer"]
layout_mode = 2
tooltip_text = "quit"
texture_normal = ExtResource("10_usqbb")
texture_pressed = ExtResource("11_sscp0")
texture_disabled = SubResource("ImageTexture_1gkq2")
stretch_mode = 3

[node name="ConnectionStatus" parent="." instance=ExtResource("8_lu7j6")]
layout_mode = 1
offset_left = -116.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 116.0

[node name="ConnectionPopup" parent="." instance=ExtResource("8_q25uu")]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1461.0
offset_top = 10.0
offset_right = 1773.0
offset_bottom = 330.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="on_settings_changed" from="TabContainer/User Settings/UserSettings" to="." method="_on_user_settings_on_settings_changed"]
[connection signal="on_settings_changed" from="TabContainer/Game Settings/GameSettings" to="." method="_on_game_settings_on_settings_changed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/UserSettings" to="." method="_on_user_settings_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/GameSettings" to="." method="_on_game_settings_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/ConnectionSettings" to="." method="_on_connection_settings_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Disconnect" to="." method="_on_disconnect_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
[connection signal="host" from="ConnectionPopup" to="." method="_on_connection_popup_host"]
[connection signal="join" from="ConnectionPopup" to="." method="_on_connection_popup_join"]
